Smell-fixes according to sonarcloud report